--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -25,7 +25,7 @@ let params = Astro.params;
     <ViewTransitions />
   </head>
   <body
-    class={`${pathname == "/" && "background_noise dark:background_noise_dark"} dark:text-platinum text-raisinblack dark:bg-dark bg-snow`}
+    class={`${pathname == "/" && "background_noise dark:background_noise_dark"} dark:text-platinum text-raisinblack dark:bg-dark bg-dark`}
   >
     <div
       class={`${pathname == "/" ? "flex h-screen select-none flex-col justify-center" : "relative flex min-h-screen flex-col justify-between"}`}
