--- a/src/components/organisms/Header.astro
+++ b/src/components/organisms/Header.astro
@@ -5,8 +5,9 @@ import logo from "@/assets/logo.png";
 let pathname = Astro.url.pathname;
 ---
 
-<div id="header" class="tablet:w-screen bg-dark fixed z-10 w-[99vw]">
-  <header
+<div id="header" class="tablet:w-screen bg-dark fixed w-[99vw]">
+  <header class="bg-cerise h-3 background_noise"></header>
+  <!--   <header
     class="border-timberwolf dark:border-timberwolf tablet:mr-6 tablet:ml-[2%] laptop:ml-[27vw] desktop:ml-[23rem] mx-2 flex flex-row items-center justify-between border-b-[1px] border-opacity-50 dark:border-opacity-70 h-[54px]"
   >
     <div class="laptop:ml-12 laptop:invisible z-[99] ml-2">
@@ -25,7 +26,7 @@ let pathname = Astro.url.pathname;
         <NavBar client:load pathname={pathname} />
       </nav>
     </div>
-  </header>
+  </header> -->
   <div class="laptop:hidden flex">
     <!-- <div class="laptop:hidden transition-opacity-1 flex flex-row">
       <NavBarMobile client:load pathname={pathname} />
