--- a/src/components/organisms/Header.astro
+++ b/src/components/organisms/Header.astro
@@ -5,7 +5,7 @@ import logo from "@/assets/logo.png";
 let pathname = Astro.url.pathname;
 ---
 
-<div id="header" class="tablet:w-screen bg-dark fixed w-[99vw]">
+<div id="header" class="tablet:w-screen bg-dark fixed w-full">
   <header class="bg-cerise h-3 background_noise"></header>
   <!--   <header
     class="border-timberwolf dark:border-timberwolf tablet:mr-6 tablet:ml-[2%] laptop:ml-[27vw] desktop:ml-[23rem] mx-2 flex flex-row items-center justify-between border-b-[1px] border-opacity-50 dark:border-opacity-70 h-[54px]"
