--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -50,9 +50,9 @@ let params = Astro.params;
         ) : (
           <div>
             <Header />
-            <div class="tablet:pb-[5.9rem] tablet:w-[97vw] w-[95vw]  pb-[7rem]">
+            <div class="tablet:pb-[5.9rem] tablet:w-full w-full pb-[7rem] ">
               <div class="tablet:h-[5.9rem] top-0 h-20 " />
-              <div class="laptop:pl-[29vw] desktop:pl-[24rem]  tablet:w-[82.6%] laptop:w-[90%] desktop:w-[94%] desktop:max-w-[120rem] mx-auto laptop:ml-[2%] desktop:ml-[1%] widescreen:ml-[2%] fullhd:mx-auto flex w-[89%] justify-center">
+              <div class="laptop:pl-[29vw] desktop:pl-[24rem]  tablet:w-[82.6%] laptop:w-[90%] desktop:w-[94%] desktop:max-w-[120rem] ml-[5%] tablet:ml-[4%] laptop:ml-[2%] desktop:ml-[1%] widescreen:ml-[2%] fullhd:mx-auto flex w-[93%] justify-center">
                 <slot />
                 <SideMenu client:load />
               </div>
