--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -57,9 +57,13 @@ import yo from "@/assets/images/yo3.webp";
         </h1>
       </div>
       <div>
-        <div class="p-2 float-right min-w-[19em] w-[32vw] max-w-[28em]">
+        <div
+          class="p-1 tablet:p-2 float-right min-w-[12em] tablet:min-w-[19em] w-[32vw] max-w-[28em]"
+        >
           <img class="rounded-md" src={yo.src} alt="yo" />
-          <div class="mt-2 my-4 bg-timberwolf/5 w-full px-2 rounded-sm">
+          <div
+            class="flex flex-col tablet:block mt-2 my-4 bg-timberwolf/5 w-full px-2 rounded-sm"
+          >
             <h2 class="font-chrono text-3xl">My links</h2>
             <a
               class="text-xl text-timberwolf hover:text-ocre transition-colors"
