--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -7,6 +7,7 @@ import Header from "@/components/organisms/Header.astro";
 import SideMenu from "@/components/organisms/SideMenu";
 import logo from "@/assets/logo.png";
 import { ViewTransitions } from "astro:transitions";
+import SideMenuButton from "@/components/atoms/SideMenuButton";
 const { title } = Astro.props;
 let pathname = Astro.url.pathname;
 let params = Astro.params;
@@ -55,6 +56,7 @@ let params = Astro.params;
               <div class="laptop:pl-[29vw] desktop:pl-[24rem]  tablet:w-[82.6%] laptop:w-[90%] desktop:w-[94%] desktop:max-w-[120rem] ml-[5%] tablet:ml-[4%] laptop:ml-[2%] desktop:ml-[1%] widescreen:ml-[2%] fullhd:mx-auto flex w-[93%] justify-center">
                 <slot />
                 <SideMenu client:load />
+                <SideMenuButton client:load />
               </div>
             </div>
           </div>
