--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -52,8 +52,8 @@ let params = Astro.params;
           <div>
             <Header />
             <div class="tablet:pb-[5.9rem] tablet:w-full w-full pb-[7rem] ">
-              <div class="tablet:h-[5.9rem] top-0 h-20 " />
-              <div class="laptop:pl-[29vw] desktop:pl-[24rem]  tablet:w-[82.6%] laptop:w-[90%] desktop:w-[94%] desktop:max-w-[120rem] ml-[5%] tablet:ml-[4%] laptop:ml-[2%] desktop:ml-[1%] widescreen:ml-[2%] fullhd:mx-auto flex w-[93%] justify-center">
+              <div class="tablet:h-[3.3rem] top-0 h-[1.3rem] " />
+              <div class="laptop:pl-[29vw] desktop:pl-[24rem]  tablet:w-[92%] laptop:w-[90%] desktop:w-[94%] desktop:max-w-[120rem] ml-[5%] tablet:ml-[4%] laptop:ml-[2%] desktop:ml-[1%] widescreen:ml-[2%] fullhd:mx-auto flex w-[95%] justify-center">
                 <slot />
                 <SideMenu client:load />
                 <SideMenuButton client:load />
