--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -26,7 +26,7 @@ import yo from "@/assets/images/yo3.webp";
   >
   </aside>
   <main class="w-full font-tommyMedium">
-    <div class="mb-8">
+    <div class="mb-8 pr-3 tablet:pr-0">
       <div class="bg-cerise py-1 h-16 flex items-center">
         <h1
           class="tablet:tracking-wide tablet:text-5xl laptop:text-5xl desktop:text-5xl laptop:tracking-normal cursor-default text-[2.4rem]"
