--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -16,6 +16,8 @@ import pw from "@/assets/icons/playwright.svg";
 import astro from "@/assets/icons/astro.svg";
 import php from "@/assets/icons/php.svg";
 import gleam from "@/assets/icons/lucy.svg";
+import flutterflow from "@/assets/icons/flutterflow.jpeg";
+import wordpress from "@/assets/icons/wordpress.svg";
 import yo from "@/assets/images/yo3.webp";
 ---
 
@@ -214,6 +216,16 @@ import yo from "@/assets/images/yo3.webp";
             <Image
               src={ae}
               alt="ae"
+              class="rounded-md w-12 tablet:w-16 laptop:w-16"
+            />
+            <Image
+              src={flutterflow}
+              alt="flutterflow"
+              class="rounded-md w-12 tablet:w-16 laptop:w-16"
+            />
+            <Image
+              src={wordpress}
+              alt="wordpress"
               class="rounded-md w-12 tablet:w-16 laptop:w-16"
             />
           </div>
