--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -4,7 +4,7 @@ import { getCollection } from "astro:content";
 export async function getStaticPaths() {
   const blogEntries = await getCollection("posts");
 
-  return blogEntries.map((entry) => ({
+  return blogEntries.map((entry: any) => ({
     params: { slug: entry.slug },
     props: { entry },
   }));
