--- a/src/components/atoms/PostSubtitle.astro
+++ b/src/components/atoms/PostSubtitle.astro
@@ -2,10 +2,10 @@
 const { title } = Astro.props;
 ---
 
-<div class="bg-cerise py-1 h-16 flex items-center">
-  <h1
+<div class="bg-cerise py-1 mb-1 h-16 flex items-center">
+  <h2
     class="tablet:tracking-wide tablet:text-5xl laptop:text-5xl desktop:text-5xl laptop:tracking-normal cursor-default text-[2.4rem]"
   >
     {title}
-  </h1>
+  </h2>
 </div>
