--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -61,7 +61,7 @@ import yo from "@/assets/images/yo3.webp";
         <div
           class="p-1 tablet:p-2 float-right min-w-[12em] tablet:min-w-[19em] w-[32vw] max-w-[28em]"
         >
-          <img class="rounded-md" src={yo.src} alt="yo" />
+          <Image class="rounded-md" src={yo} alt="yo" />
           <div
             class="flex flex-col tablet:block mt-2 my-4 bg-timberwolf/5 w-full px-2 rounded-sm"
           >
