--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -24,7 +24,7 @@ import yo from "@/assets/images/yo3.webp";
 <MainLayout title="Caracolaracol | Portfolio">
   <aside
     transition:name="side"
-    class={`hidden transition-opacity opacity-50 hide_scrollbar laptop:block  w-[20rem] h-full max-h-[100vh] laptop:w-[26vw] desktop:w-[21rem] fixed top-0 left-0 z-30 bg-cerise/80 background_noise`}
+    class={`hidden transition-opacity opacity-50 hide_scrollbar laptop:block  w-[20rem] h-full max-h-[100vh] laptop:w-[26vw] desktop:w-[21rem] fixed top-0 left-0 z-30 `}
   >
   </aside>
   <main class="w-full font-tommyMedium">
