--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -29,7 +29,7 @@ import yo from "@/assets/images/yo3.webp";
   </aside>
   <main class="w-full font-tommyMedium">
     <div class="mb-8 pr-3 tablet:pr-0">
-      <div class="bg-cerise mb-1 flex flex-col h-32 justify-center px-8">
+      <div class="bg-cerise mb-6 flex flex-col h-[7rem] justify-center px-8">
         <h1
           class="tablet:tracking-wide tablet:text-5xl laptop:text-5xl desktop:text-5xl laptop:tracking-normal cursor-default text-[2.4rem]"
         >
@@ -109,9 +109,9 @@ import yo from "@/assets/images/yo3.webp";
           </p>
           <p class="my-2">
             I'm also into Organic farming, in fact I'm a member of an urban
-            garden organization where I have some potage gardens and cultivate
-            organic food. They also have a magazine that they publish once in a
-            month and I participate as the photographer of the magazine.
+            garden organization where I cultivate organic food in my own garden
+            plots. Additionally, the organization publishes a monthly magazine,
+            and I contribute as photographer and writer.
           </p>
         </div>
       </div>
