--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -129,11 +129,9 @@ import yo from "@/assets/images/yo3.webp";
         when I build my projects.
       </p>
       <div class="flex flex-row flex-wrap gap-2 mb-4">
-        <div class="bg-timberwolf/10 p-2 rounded-md">
-          <h2 class="font-chrono text-3xl">Programming languages</h2>
-          <div
-            class="flex flex-row flex-wrap gap-2 p-2 rounded-md w-full bg-timberwolf/10"
-          >
+        <div class="p-2 rounded-md">
+          <h2 class="font-chrono text-3xl ml-1">Programming languages</h2>
+          <div class="flex flex-row flex-wrap gap-2 p-2 rounded-md w-full">
             <Image
               src={ts}
               alt="typescript"
@@ -157,10 +155,8 @@ import yo from "@/assets/images/yo3.webp";
           </div>
         </div>
         <div class="bg-raisinblack/55 p-2 rounded-md">
-          <h2 class="font-chrono text-3xl">Frameworks & Libraries</h2>
-          <div
-            class="flex flex-row flex-wrap gap-2 p-2 rounded-md w-full bg-timberwolf/10"
-          >
+          <h2 class="font-chrono text-3xl ml-1">Frameworks & Libraries</h2>
+          <div class="flex flex-row flex-wrap gap-2 p-2 rounded-md w-full">
             <Image
               src={react}
               alt="react"
@@ -193,11 +189,9 @@ import yo from "@/assets/images/yo3.webp";
             />
           </div>
         </div>
-        <div class="bg-darkpurple/55 p-2 rounded-md">
-          <h3 class="font-chrono text-3xl">Other tools</h3>
-          <div
-            class="flex flex-row flex-wrap gap-2 p-2 rounded-md w-full bg-timberwolf/10"
-          >
+        <div class="p-2 rounded-md">
+          <h3 class="font-chrono text-3xl ml-1">Other tools</h3>
+          <div class="flex flex-row flex-wrap gap-2 p-2 rounded-md w-full">
             <Image
               src={firebase}
               alt="firebase"
