--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -110,8 +110,7 @@ import yo from "@/assets/images/yo3.webp";
           <p class="my-2">
             I'm also into Organic farming, in fact I'm a member of an urban
             garden organization where I cultivate organic food in my own garden
-            plots. Additionally, the organization publishes a monthly magazine,
-            and I contribute as photographer and writer.
+            plots.
           </p>
         </div>
       </div>
