--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const styles = "font-chrono text-2xl tablet:text-3xl laptop:text-4xl p-2";
         >
           #{" "}
         </span>
-        Hi there! I'm Agustín Rojas, I'm a web developer and artist.
+        Hi there! I'm Agustín Rojas, I'm a software engineer and artist.
       </p>
       <h2 class={`${styles} pt-2`}>Welcome to my site!</h2>
     </main>
