--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -38,7 +38,7 @@ import yo from "@/assets/images/yo3.webp";
       </div>
       <div class="my-1">
         <p>
-          Hi! I'm Agustín Rojas aka Caracol aka Caracolaracol, thank you for
+          Hi! I'm Agustín Rojas, thank you for
           vising my portfolio!, you've gained access a detailed archive of all
           of my works. Although you can encounter mostly with my software
           development projects and colaborations, there is also a significant
