--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -57,7 +57,7 @@ const blogEntries = await getCollection("posts");
               <div class="tablet:h-[3.3rem] top-0 h-[1.3rem] " />
               <div class="laptop:pl-[26vw] desktop:pl-[19rem]  tablet:w-[92%] laptop:w-[90%] desktop:w-[91%] desktop:max-w-[115rem] ml-[5%] tablet:ml-[4%] laptop:ml-[2%] desktop:ml-[1%] widescreen:ml-[2%] fullhd:mx-auto flex w-[95%] justify-center">
                 <slot />
-                <SideMenu client:load blogEntries={blogEntries} />
+                <SideMenu client:load blogEntries={blogEntries} pathname={pathname} />
                 <SideMenuButton client:load />
               </div>
             </div>
