--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,31 +1,24 @@
 ---
 import MainLayout from '@/layouts/MainLayout.astro';
 
-const posts = [
-    {
-        title: "Primer Post",
-        date: "2023-10-01",
-        excerpt: "Este es el primer post de mi blog.",
-        link: "/blog/primer-post"
-    },
-    {
-        title: "Segundo Post",
-        date: "2023-10-02",
-        excerpt: "Este es el segundo post de mi blog.",
-        link: "/blog/segundo-post"
-    }
-];
+import { getCollection } from 'astro:content';
+
+const posts = await getCollection('posts');
+
+console.log(posts)
 ---
 
 <MainLayout title='blog'>
+    <div class="flex flex-col">
     <h1>Blog</h1>
-    <ul>
-        {posts.map(post => (
-            <li>
-                <h2><a href={post.link}>{post.title}</a></h2>
-                <p>{post.date}</p>
-                <p>{post.excerpt}</p>
-            </li>
-        ))}
-    </ul>
+    <h2>Todos los posts</h2>
+
+    <div>
+    </div>
+    {posts.map((post) => (
+        <a href="/blog/vuelo">
+            <h2>{post.data.title}</h2>
+        </a>
+    ))}
+    </div>
 </MainLayout>
