--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -15,3 +15,12 @@ const { post } = Astro.props;
     </div>
   </main>
 </MainLayout>
+<script is:inline>
+ document.addEventListener("DOMContentLoaded", function() {
+       if (navigator.userAgent.toLowerCase().includes('firefox')) {
+    document.body.classList.add('dark:background_noise_dark_firefox');
+  } else {
+    document.body.classList.add('dark:background_noise_dark');
+  }
+})
+  </script>
