--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 import { Image } from "astro:assets";
 import yo1 from "@/assets/images/yo4.jpg";
 import yo2 from "@/assets/images/yo5.jpg";
-const styles = "font-chrono text-2xl tablet:text-3xl laptop:text-4xl p-2";
+const styles = "font-chrono text-lg tablet:text-3xl laptop:text-4xl p-2";
 ---
 
 <MainLayout title="Caracolaracol || Portfolio">
@@ -26,11 +26,11 @@ const styles = "font-chrono text-2xl tablet:text-3xl laptop:text-4xl p-2";
       class="z-50 flex flex-col flex-nowrap justify-evenly px-2 text-center"
     >
       <h1
-        class="font-tommyMedium tablet:tracking-wide tablet:text-5xl laptop:text-6xl desktop:text-7xl laptop:tracking-normal cursor-default overflow-hidden text-[2.4rem]"
+        class="font-tommyMedium tablet:tracking-wide tablet:text-5xl laptop:text-6xl desktop:text-7xl laptop:tracking-normal cursor-default overflow-hidden text-[1.2rem]"
       >
         Caracolaracol{" "}
         <span
-          class="text-ocre tablet:text-4xl laptop:text-6xl desktop:text-7xl font-tommyBold text-4xl"
+          class="text-ocre tablet:text-4xl laptop:text-6xl desktop:text-7xl font-tommyBold text-xl"
           >{`//`}</span
         >{" "}
         Creative Developer
@@ -45,7 +45,7 @@ const styles = "font-chrono text-2xl tablet:text-3xl laptop:text-4xl p-2";
         </span>
         Hi there! I'm Agustín Rojas, I'm a software engineer and artist.
       </p>
-      <h2 class={`${styles} pt-2`}>Welcome to my site!</h2>
+      <h2 class={`${styles} pt-2 `}>Welcome to my site!</h2>
     </main>
 
     <nav
@@ -54,16 +54,16 @@ const styles = "font-chrono text-2xl tablet:text-3xl laptop:text-4xl p-2";
     >
       <a href="portfolio">
         <button 
-          class="font-tommyMedium bg-violet text-platinum hover:text-cerise dark:bg-violet dark:hover:text-cerise dark:text-blancon tablet:py-0 tablet:h-14 tablet:px-4 desktop:px-7 desktop:py-8 tablet:text-4xl desktop:text-4xl tablet:tracking-wider tablet:min-w-[20rem] laptop:min-w-[22rem] group flex h-10 w-fit min-w-[14.5rem] items-center justify-center gap-2 rounded-lg px-6 py-6 text-2xl transition-colors"
+          class="font-tommyMedium bg-violet text-platinum hover:text-cerise dark:bg-violet dark:hover:text-cerise dark:text-blancon tablet:py-0 tablet:h-14 tablet:px-4 desktop:px-7 desktop:py-8 tablet:text-4xl desktop:text-4xl tablet:tracking-wider tablet:min-w-[20rem] laptop:min-w-[22rem] group flex h-7 w-fit min-w-[12.5rem] items-center justify-center gap-2 rounded-lg px-4 py-5 text-base transition-colors"
         >
           <p
-            class="text-cerise text-4xl group-hover:text-snow transition-colors"
+            class="text-cerise text-xl group-hover:text-snow transition-colors"
           >
             {"{ "}
           </p>
           My Portfolio
           <p
-            class="text-cerise text-4xl group-hover:text-snow transition-colors"
+            class="text-cerise text-xl group-hover:text-snow transition-colors"
           >
             {" }"}
           </p>
