--- a/src/components/atoms/PostTitle.astro
+++ b/src/components/atoms/PostTitle.astro
@@ -8,7 +8,7 @@ let pubDate = DateTime.fromJSDate(date).toLocaleString(
 );
 ---
 
-<div class="bg-cerise mb-10 flex flex-col h-[5.5rem] tablet:h-[7rem] justify-center px-8">
+<div class="bg-cerise/65 mb-10 flex flex-col h-[5.5rem] tablet:h-[7rem] justify-center px-8">
   <h1
     class="tablet:tracking-wide tablet:text-5xl laptop:text-5xl desktop:text-5xl laptop:tracking-normal cursor-default text-[2.1rem]"
   >
