--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -29,7 +29,7 @@ import yo from "@/assets/images/yo3.webp";
   </aside>
   <main class="w-full font-tommyMedium">
     <div class="mb-8 pr-3 tablet:pr-0">
-      <div class="bg-cerise mb-6 flex flex-col h-[7rem] justify-center px-8">
+      <div class="bg-cerise/55 mb-6 flex flex-col h-[7rem] justify-center px-8">
         <h1
           class="tablet:tracking-wide tablet:text-5xl laptop:text-5xl desktop:text-5xl laptop:tracking-normal cursor-default text-[2.4rem] " 
         >
